fix: /malts editvault